# practica_ibd

./: .gitignore  Dockerfile  Final_Kimball_Model.xlsx  Final_Kimball_Model_Def.xlsx  README.md  airflow.env  docker-compose.yml  init.sql  pyproject.toml  repository.md  run.bat  run.sh
dags/: air_quality_dag.py  contaminacion_acustica_dag.py  gob_meteor_dag.py  load_noticias_to_mongodb_dag.py  meteor_dag.py  noticias_dag.py  sentiment_analysis_noticias_dag.py  spark_airflow.py  utils.py  weekly_spark_incremental.py
jobs/: enrich_spark.py  init_test.py  mappings.py  sentiment_analysis.py
notebooks/: air_quality_dag.ipynb  air_quality_pablo.ipynb  contaminacion_acustica.ipynb  earth_engine_prueba_pablo.ipynb  mongo.ipynb  noticias_2024-04-02.json  noticias_2024-04-03.json  noticias_2024-04-04.json  noticias_dag.ipynb  sentiment_analysis.ipynb
pgadmin4/: servers.json
web_app/: Dockerfile  Main_Page.py  Medioambiente.py
web_app/.streamlit/: secrets.toml
web_app/pages/: Noticias.py
web_app/utils/: constants.py  voronoi.py
